# study-skill

./: .commitlintrc.json  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  SKILL.md  pyrightconfig.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  change_request.md
.github/workflows/: ci.yml
docs/adr/: 0001-repository-structure.md  0002-workspace-independent-fsrs.md  0003-catalog-extension-normalization.md  template.md
references/: agent-adapters.md  difficulty-adaptation.md  fsrs-spaced-repetition.md  research-agents.md  template-resolution.md  visual-libraries.md  workspace-lifecycle.md
scripts/catalog/: pyproject.toml
scripts/catalog/src/catalog/: __init__.py  cli.py  converter.py  matcher.py  models.py  scanner.py
scripts/catalog/tests/: test_cli.py  test_converter.py  test_matcher.py  test_models.py  test_scanner.py  test_validate_skill.py
scripts/e2e/: study-lifecycle-smoke.sh  validate-skill.py
scripts/fsrs/: .gitignore  go.mod
scripts/fsrs/cmd/fsrs/: main.go  main_test.go
scripts/fsrs/internal/: algorithm.go  algorithm_test.go  card.go  card_test.go  store.go  store_test.go
scripts/fsrs/testdata/: sample_cards.json
templates/c/: .clang-format  Makefile
templates/c/src/: main.c
templates/go-flat/: go.mod
templates/go-idiomatic/: .gitignore  Makefile
templates/go-idiomatic/cmd/study/: main.go
templates/plain/: README.md
templates/python/: requirements.txt
templates/rust/: Cargo.toml
templates/rust/src/: main.rs
templates/typescript/: package.json
