[project]
name = "study-catalog"
version = "0.1.0"
description = "Book catalog builder for the study skill"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.13.4",
    "pdfplumber>=0.11",
]

[project.scripts]
study-catalog = "catalog.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/catalog"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "pyyaml>=6.0",
    "pytest-cov>=7.0",
    "pytest>=8.0",
    "ruff>=0.8",
]
